test_case/alpine.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine
  namespace: kube-system
spec:
  containers:
  - image: 192.168.130.1:5000/alpine
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: alpine
  restartPolicy: Always
